# Poetry

./: README.md
my_project/: pyproject.toml
my_project/tests/: test_my-project.py
