[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Anuj Patwa",email = "anujptw61@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=1.5,<2.0)"
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
